--- a/Practical HTML5 Projects/Code02 A Roll-over picture gallery/gallery-3col-mix.html
+++ b/Practical HTML5 Projects/Code02 A Roll-over picture gallery/gallery-3col-mix.html
@@ -18,166 +18,172 @@
 </head>
 
 <body>
-    <div class="wrapper">
-	    <div class="row">
-	        <div class="col-12">        
-                    <header><!--<div id="hdr"> changed to <header>-->
-                        <h1>TourOrris's (Rural Retreats)</h1>
-                        <div id="container">
-                            <p>&nbsp;</p>
-                            <p>Tour Orris (default)</p>
-                            <p>
-                                <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                <a href="html5-nav.html">Page 2</a>
-                                <a href="simplistic-side-by-side.html">Page 3</a>
-                                <a href="simplistic-html5-java.html">Page 4</a>
-                                <a href="simplistic-html5.html">Page 5</a>
-                                <a href="gallery-one-col.html">Page 6</a>
-                                <a href="gallery-2col.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                            <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                <a href="gallery-3col-mix.html">Page 1</a>
-                                <a href="gallery-page-validated.html">Page 2</a>
-                                <a href="squares-html5.html">Page 3</a>
-                                <a href="horiz-vert-menu.html">Page 4</a>
-                                <a href="fig2-nifty.html">Page 5</a>
-                                <a href="starter-page.html">Page 6</a>
-                                <a href="index2.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </header>
-	<ul id="col-1">
-		<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
-				<img class="hid" src="images/alilarge.jpg" alt=""></a>
-		</li>
-		<li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat">
-				<img class="hid" src="images/catlarge.jpg" alt=""></a>
-		</li>
-		<li><a href="#"><img src="images/beachthumb.jpg" title="Baech" alt="Beach">
-				<img class="hid" src="images/beachlarge.jpg" alt=""></a>
-		</li>
-	</ul>
-	<ul id="col-2">
-		<li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children">
-				<img class="hid" src="images/childrenbig.jpg" alt=""></a>
-		</li>
-		<li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape">
-				<img class="hid" src="images/seabig.jpg" alt=""></a>
-		</li>
-		<li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card">
-				<img class="hid" src="images/take-cardbig.jpg" alt=""></a>
-		</li>
-	</ul>
-	<ul id="col-3">
-		<li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales">
-				<img class="hid" src="images/walesbig.jpg" alt=""></a>
-		</li>
-		<li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners">
-				<img class="hid" src="images/pensbig.jpg" alt=""></a>
-		</li>
-	</ul>
-	<!-- <p>Footer goes here</p> -->
-	<footer>
-		<!-- note that we're programmatically forcing validation and then preventing the form from actually submitting...this is only a test form, and there's no point having it submit to itself for no reason -->
+	<div class="wrapper">
+		<div class="row">
+			<div class="col-12">
+				<header><!--<div id="hdr"> changed to <header>-->
+					<h1>TourOrris's (Rural Retreats)</h1>
+					<div id="container">
+						<p>&nbsp;</p>
+						<p>Tour Orris (default)</p>
+						<p>
+							<a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+							<a href="html5-nav.html">Page 2</a>
+							<a href="simplistic-side-by-side.html">Page 3</a>
+							<a href="simplistic-html5-java.html">Page 4</a>
+							<a href="simplistic-html5.html">Page 5</a>
+							<a href="gallery-one-col.html">Page 6</a>
+							<a href="gallery-2col.html">Page 7</a>
+						</p>
+						<p>&nbsp;</p>
+						<p class="inline-block">Practical HTML5 Project&#39;s<br>
+							<a href="gallery-3col-mix.html">Page 1</a>
+							<a href="gallery-page-validated.html">Page 2</a>
+							<a href="squares-html5.html">Page 3</a>
+							<a href="horiz-vert-menu.html">Page 4</a>
+							<a href="fig2-nifty.html">Page 5</a>
+							<a href="starter-page.html">Page 6</a>
+							<a href="index2.html">Page 7</a>
+						</p>
+						<p>&nbsp;</p>
+					</div>
+				</header>
+				<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
+							<img class="hid" src="images/alilarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat">
+							<img class="hid" src="images/catlarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/beachthumb.jpg" title="Baech" alt="Beach">
+							<img class="hid" src="images/beachlarge.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-2col">
+					<li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children">
+							<img class="hid" src="images/childrenbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape">
+							<img class="hid" src="images/seabig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card">
+							<img class="hid" src="images/take-cardbig.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales">
+							<img class="hid" src="images/walesbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners">
+							<img class="hid" src="images/pensbig.jpg" alt=""></a>
+					</li>
+				</ul>
+				<!-- <p>Footer goes here</p> -->
+				<footer>
+					<!-- note that we're programmatically forcing validation and then preventing the form from actually submitting...this is only a test form, and there's no point having it submit to itself for no reason -->
 
-		<!-- <h1>HTML5 forms example</h1> -->
+					<!-- <h1>HTML5 forms example</h1> -->
 
-		<p>This is an example for the
-			<a href="http://dev.opera.com/articles/view/new-form-features-in-HTML5/">
-				<cite>New form features in HTML5</cite>
-			</a> article
-		</p>
+					<p>This is an example for the
+						<a href="http://dev.opera.com/articles/view/new-form-features-in-HTML5/">
+							<cite>New form features in HTML5</cite>
+						</a> article
+					</p>
 
-		<form id="form-order" onsubmit="this.checkValidity(); return false;">
-			<div>
-				<label for="title">Title</label>
-				<input type="text" list="mydata" name="title" id="title" placeholder="Select one or enter your own"
-					required>
-				<datalist id="mydata">
-					<option label="Mr" value="Mister">
-					<option label="Mrs" value="Mistress">
-					<option label="Ms" value="Miss">
-				</datalist>
-			</div>
+					<form id="form-order" onsubmit="this.checkValidity(); return false;">
+						<div>
+							<label for="title">Title</label>
+							<input type="text" list="mydata" name="title" id="title"
+								placeholder="Select one or enter your own" required>
+							<datalist id="mydata">
+								<option label="Mr" value="Mister">
+								<option label="Mrs" value="Mistress">
+								<option label="Ms" value="Miss">
+							</datalist>
+						</div>
 
-			<div>
-				<label for="name">Name</label>
-				<input type="text" name="name" id="name" placeholder="John Doe" required>
-			</div>
+						<div>
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" placeholder="John Doe" required>
+						</div>
 
-			<div>
-				<label for="phone">Phone number</label>
-				<input type="tel" name="phone" id="phone" placeholder="+1 23456789" pattern="[0-9]{10}"> (optional)
-			</div>
+						<div>
+							<label for="phone">Phone number</label>
+							<input type="tel" name="phone" id="phone" placeholder="+1 23456789" pattern="[0-9]{10}">
+							(optional)
+						</div>
 
-			<div>
-				<label for="email">Email address</label>
-				<input type="email" name="email" id="email" placeholder="foo@bar.com" required>
-			</div>
+						<div>
+							<label for="email">Email address</label>
+							<input type="email" name="email" id="email" placeholder="foo@bar.com" required>
+						</div>
 
-			<div>
-				<label for="website">Your website</label>
-				<input type="url" name="website" id="website" placeholder="www.yoursite.com"> (optional)
-			</div>
+						<div>
+							<label for="website">Your website</label>
+							<input type="url" name="website" id="website" placeholder="www.yoursite.com"> (optional)
+						</div>
 
-			<div>
-				<label for="numberexample">Nr. of items to order</label>
-				<input type="number" name="numberexample" id="numberexample" min="1" max="10" value="1" required>
-				(1-10)
-			</div>
+						<div>
+							<label for="numberexample">Nr. of items to order</label>
+							<input type="number" name="numberexample" id="numberexample" min="1" max="10" value="1"
+								required>
+							(1-10)
+						</div>
 
-			<div>
-				<label for="rangeexample">Length</label>
-				<input type="range" name="rangeexample" id="rangeexample" min="1" max="10" value="1" step="0.1">
-				<output onforminput="value=rangeexample.value" for="rangeexample">1</output>m (in 10cm increments)
-			</div>
+						<div>
+							<label for="rangeexample">Length</label>
+							<input type="range" name="rangeexample" id="rangeexample" min="1" max="10" value="1"
+								step="0.1">
+							<output onforminput="value=rangeexample.value" for="rangeexample">1</output>m (in 10cm
+							increments)
+						</div>
 
-			<div>
-				<label for="deliverydate">Delivery date</label>
-				<input type="date" name="deliverydate" id="deliverydate" min="2010-12-16" required> (minimum 16
-				December 2010)
-				<!-- with some server-side scripting we'd prefill the min attribute with today's date ... in this static example it's simply hardcoded -->
-			</div>
+						<div>
+							<label for="deliverydate">Delivery date</label>
+							<input type="date" name="deliverydate" id="deliverydate" min="2010-12-16" required> (minimum
+							16
+							December 2010)
+							<!-- with some server-side scripting we'd prefill the min attribute with today's date ... in this static example it's simply hardcoded -->
+						</div>
 
-			<div>
-				<label for="timeexample">Time of delivery</label>
-				<input type="time" name="timeexample" id="timeexample" step="1800" required> (in 30 min increments)
-			</div>
+						<div>
+							<label for="timeexample">Time of delivery</label>
+							<input type="time" name="timeexample" id="timeexample" step="1800" required> (in 30 min
+							increments)
+						</div>
 
-			<div>
-				<label for="colorexample">Color of the item</label>
-				<input type="color" name="colorexample" id="colorexample" value="#ed1c24"> (default red)
-			</div>
+						<div>
+							<label for="colorexample">Color of the item</label>
+							<input type="color" name="colorexample" id="colorexample" value="#ed1c24"> (default red)
+						</div>
 
-			<input type="submit">
-		</form>
+						<input type="submit">
+					</form>
 
 
-		<form id="form-search" onsubmit="return false;">
-			<div id="search_demo">
-				<label for="search">Search</label><input name="search" id="search" type="search"> <button
-					type="submit">Go</button>
-			</div>
-		</form>
+					<form id="form-search" onsubmit="return false;">
+						<div id="search_demo">
+							<label for="search">Search</label><input name="search" id="search" type="search"> <button
+								type="submit">Go</button>
+						</div>
+					</form>
 
-		<form id="form-progress-meter" onsubmit="return false;">
-			<div>
-				<label for="progress">Progress</label>
-				<progress id="progress" value="25" max="100"><span>25</span>%</progress>
-			</div>
+					<form id="form-progress-meter" onsubmit="return false;">
+						<div>
+							<label for="progress">Progress</label>
+							<progress id="progress" value="25" max="100"><span>25</span>%</progress>
+						</div>
 
-			<div id="meter_demo">
-				<label>Disk usage</label>
-				<meter min="0" value="50.3" max="232.57">50.3 GB used out of 232.57 GB</meter>
-				<meter min="0" value="193.44" max="232.57">193.44 GB used out of 232.57 GB</meter>
-				<meter min="0" value="232.57" max="232.57">232.57 GB used out of 232.57 GB</meter>
-				(3 <code>meter</code> values)
-			</div>
+						<div id="meter_demo">
+							<label>Disk usage</label>
+							<meter min="0" value="50.3" max="232.57">50.3 GB used out of 232.57 GB</meter>
+							<meter min="0" value="193.44" max="232.57">193.44 GB used out of 232.57 GB</meter>
+							<meter min="0" value="232.57" max="232.57">232.57 GB used out of 232.57 GB</meter>
+							(3 <code>meter</code> values)
+						</div>
 
-		</form>
-	<footer>
+					</form>
+					<footer>
 </body>
 
 </html>
