--- a/Practical HTML5 Projects/Code02 A Roll-over picture gallery/gallery-page-validated.html
+++ b/Practical HTML5 Projects/Code02 A Roll-over picture gallery/gallery-page-validated.html
@@ -111,6 +111,44 @@
 			</ul><br class="clear">
 		</div><!--gallery block closed-->
 	</div><!--midcol closed-->
+	<!-- <div id="midcol">
+		<div id="gallery-block">
+			<ul id="col-1">
+				<li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali">
+						<img class="hid" src="images/alibig.jpg" alt="">
+					</a>
+				</li>
+				<li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat">
+						<img class="hid" src="images/catbig.jpg" alt=""></a>
+				</li>
+				<li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach">
+						<img class="hid" src="images/beachbig.jpg" alt=""></a>
+				</li>
+			</ul>
+			<ul id="col-2">
+				<li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns">
+						<img class="hid" src="images/fernsbig.jpg" alt=""></a>
+				</li>
+				<li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico">
+						<img class="hid" src="images/nicobig.jpg" alt=""></a>
+				</li>
+				<li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach">
+						<img class="hid" src="images/childbeachbig.jpg" alt=""></a>
+				</li>
+			</ul>
+			<ul id="col-3">
+				<li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern">
+						<img class="hid" src="images/ancientbig.jpg" alt=""></a>
+				</li>
+				<li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix">
+						<img class="hid" src="images/felixbig.jpg" alt=""></a>
+				</li>
+				<li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs">
+						<img class="hid" src="images/cliffbig.jpg" alt=""></a>
+				</li>
+			</ul><br class="clear">
+		</div>!--gallery block closed--
+	</div><!--midcol closed-->
 	
 	   <footer> <!-- <p>Footer goes here</p> -->
 			<!-- note that we're programmatically forcing validation and then preventing the form from actually submitting...this is only a test form, and there's no point having it submit to itself for no reason -->
