--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -58,6 +58,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
 
 </head>
+</head>
 
 <body>
     <div class="wrapper">
@@ -90,38 +91,7 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
-                <!--
-<body>
-    <div class="wrapper">
-	    <div class="row">
-	        <div class="col-12">        
-                    <header>!--<div id="hdr"> changed to <header>--
-                        <h1>TourOrris's (Rural Retreats)</h1>
-                        <div id="container">
-                            <p>&nbsp;</p>
-                            <p>Tour Orris (default)</p>
-                            <p>
-                                <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                <a href="html5-nav.html">Page 2</a>
-                                <a href="simplistic-side-by-side.html">Page 3</a>
-                                <a href="simplistic-html5-java.html">Page 4</a>
-                                <a href="simplistic-html5.html">Page 5</a>
-                                <a href="gallery-one-col.html">Page 6</a>
-                                <a href="gallery-2col.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                            <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                <a href="gallery-3col-mix.html">Page 1</a>
-                                <a href="gallery-page-validated.html">Page 2</a>
-                                <a href="squares-html5.html">Page 3</a>
-                                <a href="horiz-vert-menu.html">Page 4</a>
-                                <a href="fig2-nifty.html">Page 5</a>
-                                <a href="starter-page.html">Page 6</a>
-                                <a href="index2.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </header> -->
+                
                 <div id="midcol">
                     <div id="gallery-block">
                         <ul id="col-1">
