--- a/starter-page.html
+++ b/starter-page.html
@@ -27,6 +27,10 @@
     <meta name="theme-color" content="#712cf9">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Ian Andolina">
+    
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
     <!-- Font Awesome Icons -->
