--- a/squares-html5.html
+++ b/squares-html5.html
@@ -15,6 +15,8 @@
 	<title>Squares for sale</title>
 
 <meta details go here>
+<link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="..\orris0\Practical HTML5 Projects\Code01\squares-html5.css" />
 <!--Add conditional Javascript-->
 <!--[if lte IE 8]>
