--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -18,7 +18,8 @@
     <meta http-equiv="Content-Language" content="en-gb" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="gallery-2col.css" />
 
 </head>
