--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -25,7 +25,10 @@
         <!-- <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
          <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
-        <link rel="stylesheet" href="./CSS/nav.css">
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
+        
+         <link rel="stylesheet" href="./CSS/nav.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
         <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
