--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -208,7 +208,7 @@
                                 </ul>
                                 <br class="clear">
                                 <nav aria-label="Page navigation example">
-                                    <ul class="pagination justify-content-center">
+                                    <ul class="pagination justify-content-end">
                                         <li class="page-item disabled">
                                             <a class="page-link" href="#" tabindex="-1">Previous</a>
                                         </li>
