--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
     <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="scripts.js"></script>
     <meta charset="UTF-8">
     
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
