--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
