--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -61,7 +61,7 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <h1>Practical HTML5 Project's for Fun&Profit</h1>
                     <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
